View Issue Details

IDProjectCategoryView StatusLast Update
0032124CommunityOCCT:Visualizationpublic2021-02-21 11:43
ReporterFlorian Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2015 
Product Version7.4.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032124: Visualization, AIS_Shape - setting color will cause Iso Lines to appear due to misprint in Prs3d_Drawer::SetOwnLineAspects()
DescriptionSetting Color on AIS_Shape will cause Iso Lines to appear in the visualization due to the VIsoAspect not being reset to context.DefaultDrawer().


This is due to a typo in Prs3d_Drawer.cxx, see line 1143. Still exists in 7.5.0:
1136   if (!myHasOwnVIsoAspect)
1137   {
1138     isUpdateNeeded = true;
1139     myVIsoAspect = new Prs3d_IsoAspect (Quantity_NOC_GRAY75, Aspect_TOL_SOLID, 1.0, 1);
1140     if (!aLink.IsNull())
1141     {
1142       *myVIsoAspect->Aspect() = *aLink->VIsoAspect()->Aspect();
1143       myUIsoAspect->SetNumber (aLink->VIsoAspect()->Number());
1144     }
1145     myHasOwnVIsoAspect = true;
1146   }

myUIsoAspect -> myVIsoAspect
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0029076 closedapn Open CASCADE Visualization - implement element shrinking Shader 

Activities

git

2021-02-10 11:07

administrator   ~0098807

Branch CR32124 has been created by kgv.

SHA-1: 14141b438d4bd80cd766b84af0f938fe0cdc1cd7


Detailed log of new commits:

Author: kgv
Date: Wed Feb 10 11:05:33 2021 +0300

    0032124: Visualization, AIS_Shape - setting color will cause Iso Lines to appear due to misprint in Prs3d_Drawer::SetOwnLineAspects()
    
    Fixed misprint myUIsoAspect -> myVIsoAspect.

kgv

2021-02-10 11:17

developer   ~0098808

Florian, thanks for catching this misprint.

kgv

2021-02-10 12:23

developer   ~0098809

Please raise the patch
- OCCT branch: CR32124.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32124-master-KGV

bugmaster

2021-02-13 11:10

administrator   ~0098862

Combination -
OCCT branch : IR-2021-02-12
master SHA - fb68dbdbd6810ee27f9398c749c5740b7bea7818
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-02-12 SHA - 94205f40e685a70c77e547147d90c09e0a21c461
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17805.430000000237 / 17802.420000000013 [+0.02%]
Products
Total CPU difference: 11513.250000000124 / 11523.070000000105 [-0.09%]
Windows-64-VC14:
OCCT
Total CPU difference: 19375.296875 / 19372.265625 [+0.02%]
Products
Total CPU difference: 12857.265625 / 12882.921875 [-0.20%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-02-21 11:43

administrator   ~0099034

Branch CR32124 has been deleted by inv.

SHA-1: 14141b438d4bd80cd766b84af0f938fe0cdc1cd7

Related Changesets

occt: master 9ee24815

2021-02-10 08:05:33

kgv


Committer: bugmaster Details Diff
0032124: Visualization, AIS_Shape - setting color will cause Iso Lines to appear due to misprint in Prs3d_Drawer::SetOwnLineAspects()

Fixed misprint myUIsoAspect -> myVIsoAspect.
Affected Issues
0032124
mod - src/Prs3d/Prs3d_Drawer.cxx Diff File

Issue History

Date Modified Username Field Change
2021-02-09 16:37 Florian New Issue
2021-02-09 16:37 Florian Assigned To => kgv
2021-02-10 11:04 kgv Target Version => 7.6.0
2021-02-10 11:04 kgv Summary Setting Color on AIS_Shape will cause Iso Lines to appear => Visualization, AIS_Shape - setting color will cause Iso Lines to appear due to misprint in Prs3d_Drawer::SetOwnLineAspects()
2021-02-10 11:04 kgv Description Updated
2021-02-10 11:07 git Note Added: 0098807
2021-02-10 11:13 kgv Relationship added child of 0029076
2021-02-10 11:17 kgv Note Added: 0098808
2021-02-10 12:23 kgv Note Added: 0098809
2021-02-10 12:23 kgv Assigned To kgv => bugmaster
2021-02-10 12:23 kgv Status new => resolved
2021-02-10 12:23 kgv Severity minor => trivial
2021-02-10 12:23 kgv Status resolved => reviewed
2021-02-13 11:10 bugmaster Note Added: 0098862
2021-02-13 11:10 bugmaster Status reviewed => tested
2021-02-13 11:16 bugmaster Test case number => Not required
2021-02-13 11:29 bugmaster Changeset attached => occt master 9ee24815
2021-02-13 11:29 bugmaster Status tested => verified
2021-02-13 11:29 bugmaster Resolution open => fixed
2021-02-21 11:43 git Note Added: 0099034